[tool.poetry]
name = "Djognito"
version = "0.1.0"
description = "Auth module for using AWS Cognito with DRF"
authors = ["Prakash2403 <rishurai24@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
Django = "<=3"
djangorestframework = "^3.13.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
